Use older Stream.collect() syntax, smh